[gd_scene load_steps=4 format=3 uid="uid://c3ngow3j3ep7b"]

[ext_resource type="Script" path="res://scenes/escape_menu.gd" id="2_hqs55"]
[ext_resource type="Theme" uid="uid://buw7l36rrsutl" path="res://scenes/main_menu_theme.tres" id="2_xjb2s"]
[ext_resource type="Texture2D" uid="uid://b33cl5d1gnwoo" path="res://scenes/flag_man_icon.tres" id="3_eko5e"]

[node name="EscapeMenu" type="Control"]
process_mode = 3
z_index = 4096
texture_filter = 1
layout_mode = 3
anchors_preset = 0
theme = ExtResource("2_xjb2s")
script = ExtResource("2_hqs55")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_right = 138.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlagManButton" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../SaveButton")
texture_normal = ExtResource("3_eko5e")
stretch_mode = 5

[node name="ContinueButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SaveButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../FlagManButton")
focus_neighbor_right = NodePath("../LoadButton")
text = "Save"

[node name="LoadButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../SaveButton")
focus_neighbor_right = NodePath("../QuitButton")
text = "Load"

[node name="QuitButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../LoadButton")
focus_neighbor_right = NodePath("../FlagManButton")
text = "Quit"
